# GraphMF4

./: .editorconfig  .gitignore  GraphMF4.iss  HANDOFF.md  LICENSE  README.md  build.ps1  build_log.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
src/: __init__.py  main.py  version.py
src/core/: __init__.py  graph_model.py  mf4_reader.py  project.py
src/samples/: Test3_Log_744_503_922.gmf4proj  Test3_Log_744_503_922_mdi.gmf4proj  TestCursor.gmf4proj
src/ui/: __init__.py  channel_editor_dialog.py  channel_list_dock.py  graph_widget.py  loader_thread.py  main_window.py  missing_files_dialog.py  replace_file_dialog.py  settings_dialog.py  signal_list_dock.py  signal_selector_dialog.py
src/utils/: downsample.py  export.py
tests/: __init__.py  test_mf4_reader.py  test_project.py
